<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/admin_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_admin_login_email"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/round_mail_outline_24"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_admin_login_password"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/round_lock_24"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_admin_login_remember_me"
                style="@style/viewParent"
                android:layout_gravity="start"
                android:text="Remember me"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_admin_login_forgot_password"
                style="@style/viewParent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginStart="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:text="Forgot Password?"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_admin_login"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            android:id="@+id/tv_admin_login_to_login_student"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Are you a student? Login here"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>